--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
       as it did before reloading.
     </p>
   </main>
+
   <footer>
     <button onclick="localStorage.clear()">Clear LocalStorage</button>
     <button onclick="location.reload()">Reload</button>
+    <h2>Dependencies</h2>
+    <json-viewer>
+      <script id="dependencies" type="application/json"></script>
+    </json-viewer>
   </footer>
 </body>
 </html>
